[gd_scene load_steps=14 format=3 uid="uid://co6fqkuokdbq1"]

[ext_resource type="Script" uid="uid://cwidp5up58lwy" path="res://mundo_2.gd" id="1_tlsbw"]
[ext_resource type="Texture2D" uid="uid://bghw4fqx6kw8d" path="res://fondo.png" id="2_a8exk"]
[ext_resource type="PackedScene" uid="uid://dtfkk4ehav2dw" path="res://celu.tscn" id="3_iog13"]
[ext_resource type="Script" uid="uid://hdbtndstsgqi" path="res://enemy2.gd" id="4_tlsbw"]
[ext_resource type="Texture2D" uid="uid://bkdql6ptobvpd" path="res://Assets/hand_anim_2.png" id="5_yynry"]
[ext_resource type="Texture2D" uid="uid://hhkkwcq47mla" path="res://Assets/vidas1.png" id="6_ptopn"]
[ext_resource type="Texture2D" uid="uid://b3f2bq7fgfsah" path="res://Assets/vidas2.png" id="7_50iiu"]
[ext_resource type="Texture2D" uid="uid://hml81105jbis" path="res://Assets/vidas3.png" id="8_o5xiv"]
[ext_resource type="Texture2D" uid="uid://noy1c56bjyqa" path="res://Assets/level_2.png" id="9_a8exk"]
[ext_resource type="Texture2D" uid="uid://dechu532fh8m3" path="res://Assets/stage2.png" id="10_db682"]
[ext_resource type="Texture2D" uid="uid://b3kbqn8rkenno" path="res://Assets/stage3.png" id="11_yynry"]
[ext_resource type="AudioStream" uid="uid://7xviqol22qyr" path="res://Assets/Hotline Miami Soundtrack _ Hydrogen(MP3_160K) (mp3cut.net).mp3" id="12_yynry"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ckkb"]
radius = 18.0278

[node name="Mundo 2" type="Node2D"]
script = ExtResource("1_tlsbw")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(433, 191)
scale = Vector2(6.73633, 6.73633)
texture = ExtResource("2_a8exk")

[node name="Celu" parent="." instance=ExtResource("3_iog13")]
position = Vector2(454, 240)

[node name="Enemy" type="Area2D" parent="."]
script = ExtResource("4_tlsbw")

[node name="Sprite2D" type="Sprite2D" parent="Enemy"]
z_index = 1
position = Vector2(1, -9.53674e-07)
scale = Vector2(0.488281, 0.488281)
texture = ExtResource("5_yynry")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
shape = SubResource("CircleShape2D_5ckkb")

[node name="LevelTwo" type="Sprite2D" parent="."]
position = Vector2(454, 240)
scale = Vector2(3.71875, 3.66211)
texture = ExtResource("9_a8exk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Vida1" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(107, 43)
scale = Vector2(0.385, 0.385)
texture = ExtResource("6_ptopn")

[node name="Vida2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(108, 43)
scale = Vector2(0.39, 0.39)
texture = ExtResource("7_50iiu")

[node name="Vida3" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(107, 43)
scale = Vector2(0.405, 0.405)
texture = ExtResource("8_o5xiv")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 664.0
offset_top = 1.0
offset_right = 863.0
offset_bottom = 94.0

[node name="Stage1" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(467, 245)
scale = Vector2(3.80273, 3.80273)

[node name="Stage2" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(454, 240)
scale = Vector2(3.66602, 3.66602)
texture = ExtResource("10_db682")

[node name="Stage3" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(454, 241)
scale = Vector2(3.67041, 3.67041)
texture = ExtResource("11_yynry")

[node name="Stage4" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(452, 241)
scale = Vector2(3.80469, 3.80469)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_yynry")
autoplay = true
